<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/design_all_around_corner">
    <TextView
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hospitalname"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        style="@style/Font.Bold.20"
        android:letterSpacing="0.05"
        android:text="@string/rumah_sakit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_pin_hospital"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_hospitalname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_pin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_addressHospital"
            style="@style/Font.Reguler.12"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:letterSpacing="0.05"
            android:text="@string/kota"
            android:textColor="@color/white"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cl_info_last_update"
        app:layout_constraintTop_toBottomOf="@id/ll_pin_hospital"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/ll_bed_availability"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_queue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="0"
                android:id="@+id/tv_bed_availability"
                android:gravity="center"
                android:background="@drawable/design_circle_corner_teal"
                style="@style/Font.Reguler.14"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/ketersediaan_kasur"
                style="@style/Font.Reguler.10"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/ll_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_bed_availability"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:id="@+id/tv_jumlah_antrian"
                android:text="0"
                android:background="@drawable/design_circle_corner_teal"
                style="@style/Font.Reguler.14"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/jumlah_antrian"
                android:gravity="center"
                style="@style/Font.Reguler.10"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
<!--    <ImageView-->
<!--        android:layout_width="25dp"-->
<!--        android:layout_height="25dp"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:src="@drawable/iv_map"/>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl_info_last_update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_info_outlined_white"
            android:id="@+id/ic_vaksinasi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tv_info_last_update"
            android:layout_marginLeft="10dp"
            android:text="@string/terakhir_update_vaksin"
            style="@style/Font.Reguler.12"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@id/ic_vaksinasi"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>